# crypto-analytics-oss

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  LINKS.md  README.md  WORKPLAN.md  pyproject.toml
crypto_analytics/: __init__.py  analyzer.py  api.py  config.py  data.py  guardrail.py  indicators.py  scorer.py
tests/: test_guardrail.py  test_scorer.py
web/: index.html
